--- a/pom.xml
+++ b/pom.xml
@@ -88,21 +88,16 @@
       <version>42.7.4</version>
     </dependency>
     <dependency>
-      <groupId>org.hibernate</groupId>
+      <groupId>org.hibernate.orm</groupId>
       <artifactId>hibernate-core</artifactId>
       <version>6.6.4.Final</version>
-      <type>pom</type>
     </dependency>
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-orm</artifactId>
       <version>6.2.1</version>
     </dependency>
-
-
-
-
-
 
   </dependencies>
 
