--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
       <artifactId>spring-orm</artifactId>
       <version>6.2.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-jpa</artifactId>
+      <version>3.4.1</version>
+    </dependency>
+
 
   </dependencies>
 
